工具版广告

--- a/css/pve/macro/view.less
+++ b/css/pve/macro/view.less
@@ -8,8 +8,6 @@
 	margin-bottom:0;
 }
 .m-macro-baseinfo{
-	.pr;
-	padding-right:290px;
 	line-height: 2.5;
 	li{
 		border-bottom:1px dashed #ddd;
@@ -53,6 +51,10 @@
 	.u-macro-zan i{
 		background-color:#f39;
 	}
+}
+.m-macro-baseinfo{
+	.pr;
+	padding-right:290px;
 }
 .m-banner-macro{
 	.pa;.rb(0,0);
