--- a/css/pve/tool/view.less
+++ b/css/pve/tool/view.less
@@ -70,6 +70,30 @@
 		}
 	}
 }
+.m-tool-baseinfo{
+	.pr;
+	padding-right:290px;
+}
+.m-banner-tool{
+	.pa;.rt(0,0);
+	.size(280px,180px);
+	a,img{.db;}
+	span{.none;}
+}
+.ua-responsive .screen-s{
+	.m-tool-baseinfo{padding-right:0;}
+	.m-banner-tool{
+		.ps;
+		margin-top:10px;
+		background-color:#f9f9f9;
+		padding:5px 10px;
+		.fz(13px,20px);.x;
+		.size(auto);
+		span{.db;}
+		img{.none;}
+		b{.dbi;background-color:#f39;color:#fff;padding:0 5px;border-radius:3px;margin-right:2px;}
+	}
+}
 .m-tool-important{
 	.pr;
 
