积分兑换后台页面

--- a/css/user/credit/gift.less
+++ b/css/user/credit/gift.less
@@ -114,3 +114,32 @@
 		padding:10px 0;
 	}
 }
+
+.admin-gift{
+	margin-top:10px;
+	table{
+		th{
+			.bold;
+			.fz(14px)
+		}
+		th,td{
+			border:1px solid #ccc;
+			padding:5px 7px;
+			max-width:240px;
+		}
+		a{
+			margin-right:5px;
+		}
+	}
+}
+
+
+.admin-gift-check{
+
+}
+
+.admin-gift-manage{}
+
+.admin-gift-button{
+	margin-top:10px;
+}
