Signed-off-by: unknown <17229398@qq.com>

--- a/template/yylmacro/portal/index.htm
+++ b/template/yylmacro/portal/index.htm
@@ -45,6 +45,13 @@
                 <p class="m-music-tips"><!--{block/1810}--></p>
             </div>
 
+            <h3 class="m-title">
+                <span>合作推广</span>
+                <a class="u-more" href="http://www.jx3pve.com/thread-17427-1-1.html" target="_blank">Join</a>
+            </h3>
+            <div class="m-ad m-subblock">
+                <!--{block/1811}-->
+            </div>
 
         </div>
     </div>
