Signed-off-by: 17229398@qq.com <17229398@qq.com>

--- a/css/module/forum/viewthread/c-fli-primary.less
+++ b/css/module/forum/viewthread/c-fli-primary.less
@@ -159,7 +159,7 @@
 		span{white-space:normal !important;}
 	}
 }
-.ua-responsive .screen-s{
+.ua-responsive.mobile .screen-s{
 	.locked{
 		padding:10px;
 		background-image:none;
@@ -170,11 +170,8 @@
 			.w(100%) !important;
 		}
 	}
-	.c-fli-reply,.t_f{
-		font-size:1rem;
-	}
-	.c-fli-article{
-		font-size:1.2rem;
+	.c-fli-article,.c-fli-reply,.t_f{
+		&,font{font-size:1rem !important;}
 	}
 }
 
