--- a/template/yylmacro/portal/portal_topic_gift.htm
+++ b/template/yylmacro/portal/portal_topic_gift.htm
@@ -10,7 +10,7 @@
         <a class="u-screenshot" href="<%this.url%>" target="_blank">
             <img src="<%this.image%>" alt="">
         </a>
-        <span class="u-meta u-name"><% this.name %></span>
+        <a class="u-meta u-name" href="<%this.url%>"><% this.name %></a>
         <span class="u-meta u-price">
             <em>水晶:<b class="u-credit-rq"><% this.cost['水晶']%></b></em>
             <em>人气:<b class="u-credit-sj"><% this.cost['人气']%></b></em>
