Signed-off-by: 17229398@qq.com <17229398@qq.com>

--- a/template/yylmacro/portal/index.htm
+++ b/template/yylmacro/portal/index.htm
@@ -40,14 +40,14 @@
                 <span>每日古风一曲</span>
                 <a class="u-history" href="http://music.163.com/#/playlist?id=376487170" target="_blank">History</a>
             </h3>
-            <div class="m-music m-subblock">
+            <div class="m-music m-subblock" style="margin-bottom:2px;">
                 <!--{block/1803}-->
                 <p class="m-music-tips"><!--{block/1810}--></p>
             </div>
 
             <h3 class="m-title">
-                <span>合作推广</span>
-                <a class="u-more" href="http://www.jx3pve.com/thread-17427-1-1.html" target="_blank">Join</a>
+                <span>赞助合作推广</span>
+                <a class="u-history" href="http://www.jx3pve.com/thread-17427-1-1.html" target="_blank">Join</a>
             </h3>
             <div class="m-ad m-subblock">
                 <!--{block/1811}-->
