Signed-off-by: 17229398@qq.com <17229398@qq.com>

--- a/css/fb/fb-old.less
+++ b/css/fb/fb-old.less
@@ -2,6 +2,8 @@
 @import url('../public/base.less');		//函数
 /*老专题统一样式*/
 
+.clear{.clearfix;}
+
 .fb-old{background-position:center 0;background-repeat:no-repeat;background-color:#000;}
 .oldfb-sidebar{	.hide;}
 .fb-old-mjmd{.fb-old;background-image:url(http://ww4.sinaimg.cn/large/bcc700eegw1efd42igj2kj21hc15okg5.jpg);}
