Signed-off-by: unknown <17229398@qq.com>

--- a/css/user/space/share.less
+++ b/css/user/space/share.less
@@ -5,11 +5,12 @@
 	li{
 		margin-bottom:10px;
 		.h{
-			background-color:#f7f7f7;
+			//background-color:#f7f7f7;
 			border-bottom:none;
 			.y{.none;}
 			padding:0 10px;
-			margin-bottom:10px;
+			//margin-bottom:10px;
+			text-align: right;
 		}
 		.ec{
 			padding:0 20px;
@@ -18,6 +19,8 @@
 			.quote{
 				color:#888;
 			}
+			border: 1px solid #AADEF7;
+    		background-color: #E8FAFF;
 		}
 	}
 }
