--- a/template/yylmacro/portal/index.htm
+++ b/template/yylmacro/portal/index.htm
@@ -20,23 +20,6 @@
             <div class="m-news">
                 <!--{block/1805}-->
             </div>
-            <h3 class="m-title" style="margin-bottom:5px;">
-                <span>急！在线等</span>
-            </h3>
-            <div class="m-chat">
-                <script type="text/javascript">
-                    (function(){
-                    var url = "http://widget.weibo.com/distribution/comments.php?width=0&url=http%3A%2F%2Fwww.jx3pve.com&border=1&brandline=y&fontsize=12&color=cccccc,ffffff,4c4c4c,225599,cccccc,f0f0f0&colordiy=1&ralateuid=5487689727&appkey=3848223136&dpc=1";
-                    document.write('<iframe id="WBCommentFrame" src="' + url + '" scrolling="no" frameborder="0" style="width:100%"></iframe>');
-                    })();
-                    </script>
-                    <script src="http://tjs.sjs.sinajs.cn/open/widget/js/widget/comment.js" type="text/javascript" charset="utf-8"></script>
-                    <script type="text/javascript">
-                    window.WBComment.init({
-                        "id": "WBCommentFrame"
-                    });
-                </script>
-            </div>
 
         </div>
         <div class="index-sidebar">
@@ -55,7 +38,7 @@
             </div>
 
             <h3 class="m-title">
-                <span>每日古风一曲</span>
+                <span>每日一曲</span>
                 <a class="u-history" href="http://music.163.com/#/playlist?id=376487170" target="_blank">History</a>
             </h3>
             <div class="m-music m-subblock" style="margin-bottom:2px;">
