读条皮肤栏目合并进工具

--- a/css/pve/tool/sidebar.less
+++ b/css/pve/tool/sidebar.less
@@ -51,9 +51,21 @@
 		.u-book i{
 			background:url('@{url}tool/book.png') no-repeat 0 0;
 		}
+		.u-snow i{
+			background:url('@{url}tool/snow.png') no-repeat 0 0;
+		}
+		.u-image i{
+			background:url('@{url}tool/source.png') no-repeat 0 0;
+		}
+		.u-book i{
+			background:url('@{url}tool/book.png') no-repeat 0 0;
+		}
+		.u-design i{
+			background:url('@{url}tool/design.png') no-repeat 0 0;
+		}
 	}
 }
-.m-tool-search{
+.m-tool-search,.m-snow-search{
 	form{
 		margin-bottom:5px;
 	}
