--- a/css/index/index/layout.less
+++ b/css/index/index/layout.less
@@ -39,11 +39,11 @@
 		.fr;
 		.fz(12px,28px);
 		.normal;
-		.color(#555,@blue-link);
+		.color(#555,#555,@blue-link);
 		transition:0.2s ease-in-out;
 		letter-spacing:0px;
 		&:hover{
-			letter-spacing:1px;
+			color:@blue-link;
 		}
 	}
 	.u-add{
