--- a/template/yylmacro/portal/index.htm
+++ b/template/yylmacro/portal/index.htm
@@ -39,7 +39,10 @@
 
             <h3 class="m-title">
                 <span>每日一曲</span>
-                <a class="u-history" href="http://music.163.com/#/playlist?id=376487170" target="_blank">History</a>
+                <span class="u-history">
+                    <a href="http://music.163.com/#/playlist?id=376516027" target="_blank">站长推荐</a> | 
+                    <a href="http://music.163.com/#/playlist?id=376487170" target="_blank">古风</a>
+                </span>
             </h3>
             <div class="m-music m-subblock" style="margin-bottom:2px;">
                 <!--{block/1803}-->
