默认系统输出发布字符class同步新版

--- a/template/wall/tpl/post.hbs
+++ b/template/wall/tpl/post.hbs
@@ -10,7 +10,10 @@
 		<li class="c-post-custom-listitem">
 			<span class="u-title"><span class="rq">{wall_uploadmode_required}</span>{wall_uploadmode}</span>
 			<span class="u-check">{wall_uploadmode_tips}</span>
-			<span class="u-content">{wall_uploadmode_value}<div class="u-tip">{wall_uploadmode_description}</div></span>
+			<span class="u-content">
+				<ul class="u-radio-list">{wall_uploadmode_value}</ul>
+				<div class="u-tip">{wall_uploadmode_description}</div>
+			</span>
 		</li>
 		
 
