Signed-off-by: unknown <17229398@qq.com>

--- a/css/pvx/wall/post.less
+++ b/css/pvx/wall/post.less
@@ -3,10 +3,24 @@
 	a{.color(@blue-dark,#c00);}
 }
 
+.c-post-body,.c-editor-extend{
+	.none;
+}
+
 .c-post-custom-listitem{
+	.none;
+}
+.m-wall-custom-default .c-post-custom-listitem{
+	.db;
+}
+.m-wall-uploadmode-local,.m-wall-uploadmode-sina{
+	.none;
+}
+
+/*.c-post-custom-listitem{
 	.px{
 		&:extend(.u-text);
 	    width: 100%;
     	box-sizing: border-box;
 	}
-}
+}*/
