Signed-off-by: unknown <17229398@qq.com>

--- a/template/yylmacro/portal/index.htm
+++ b/template/yylmacro/portal/index.htm
@@ -51,7 +51,7 @@
 
             <h3 class="m-title">
                 <span>赞助合作推广</span>
-                <a class="u-history" href="http://www.jx3pve.com/thread-17427-1-1.html" target="_blank">Join</a>
+                <a class="u-history" href="http://sighttp.qq.com/authd?IDKEY=f11d134259f732568faaf427d33ff5c5809162f66277a06e" target="_blank">Join</a>
             </h3>
             <div class="m-ad m-subblock">
                 <!--{block/1811}-->
