--- a/template/yylmacro/portal/portal_topic_gift.htm
+++ b/template/yylmacro/portal/portal_topic_gift.htm
@@ -12,8 +12,8 @@
         </a>
         <a class="u-meta u-name" href="<%this.url%>"><% this.name %></a>
         <span class="u-meta u-price">
-            <em>水晶:<b class="u-credit-rq"><% this.cost['水晶']%></b></em>
-            <em>人气:<b class="u-credit-sj"><% this.cost['人气']%></b></em>
+            <em>水晶:<b class="u-credit-sj"><% this.cost['水晶']%></b></em>
+            <em>人气:<b class="u-credit-rq"><% this.cost['人气']%></b></em>
         </span>
         <a class="u-meta u-boss" href="<%this.sponsors_url%>"><em>赞助商:</em><b><% this.sponsors %></b></a>
         <span class="u-meta u-num">库存:<b class="u-gift-num"><%this.num%></b></span>
