Signed-off-by: unknown <17229398@qq.com>

--- a/css/pvx/jh/common.less
+++ b/css/pvx/jh/common.less
@@ -84,3 +84,18 @@
 	}
 }
 
+//tab卡切换明显
+.default-sidebar{
+	.tb .on a, .tb .a a{
+		background-color:#ff8e00;
+		color:#fff;
+		border-color:#E85E0C;
+	}
+}
+.ua-responsive .screen-s{
+	.default-sidebar{
+		.tb .on a, .tb .a a{
+			background:none;
+		}
+	}
+}
