Signed-off-by: unknown <17229398@qq.com>

--- a/template/yylmacro/home/首页/space_home.htm
+++ b/template/yylmacro/home/首页/space_home.htm
@@ -1,6 +1,6 @@
 <!--{template common/header_m}-->
 <link rel="stylesheet" href="http://css.jx3pve.com/css/user/user.css" type="text/css" />
-<link rel="stylesheet" href="http://test.jx3pve.com/css/user/index/index.css" type="text/css" />
+<link rel="stylesheet" href="http://css.jx3pve.com/css/user/index/index.css" type="text/css" />
 <div class="user-container">
 	<div class="wp">
 		<div id="pt" class="bm cl">
