--- a/css/pvx/game/sidebar.less
+++ b/css/pvx/game/sidebar.less
@@ -4,3 +4,20 @@
 .w-pages-top,.w-pages-null{
 	margin-top:10px;
 }
+
+.m-game-list{
+	.clearfix;
+	li{.fl;}
+	a{.db;.indent;}
+	.u-ow{
+		.size(260px,90px);
+		background:url('http://ww2.sinaimg.cn/large/bcc700eegw1f66c092h36j207802it8m.jpg') no-repeat 0 0;
+	}
+	.u-lol{
+		.size(200px,90px);
+		background:url('http://ww4.sinaimg.cn/large/bcc700eegw1f66c07z6huj205k02iwej.jpg') no-repeat 0 0;
+	}
+	.on{
+		border:2px solid #FDAD1C;
+	}
+}
