--- a/css/system/sitemap.less
+++ b/css/system/sitemap.less
@@ -125,6 +125,11 @@
 				background-image:url('@{url}tool/snow.png');
 				background-size:auto 100%;
 			}
+			.u-ow{
+				background-image:url('@{url}game/ow/ow.png');
+				background-size:auto 100%;
+			}
+
 	}
 
 	.m-sitemap-about,
