--- a/template/about/portal/portal_topic_sitemap.htm
+++ b/template/about/portal/portal_topic_sitemap.htm
@@ -29,6 +29,7 @@
 				<li><a href="./biz"><i class="u-biz"></i><span>交易</span></a></li>
 				<li><a href="./story"><i class="u-story"></i><span>回忆录</span></a></li>
 				<li><a href="./bbs"><i class="u-bbs"></i><span>讨论区</span></a></li>
+				<li><a href="./ow"><i class="u-ow"></i><span>竞技</span></a></li>
 				<li><a href="./wiki"><i class="u-wiki"></i><span>百科</span></a></li>
 			</ul>
 		</div>
@@ -44,10 +45,10 @@
 			<h2>停更栏目</h2>
 			<ul>
 				<li><a href="./pet">宠物<em>(PC版)</em></a></li>
-				<li><a href="./video">视频<em>(PC版)</em></a></li>
 				<li><a href="./cloud">超级宏官网<em>(已和谐)</em></a></li>
 				<li><a href="./forum.php?mod=forumdisplay&fid=85">超级宏论坛<em>(已和谐)</em></a></li>
 				<li><a href="./group.php">群组<em>(私版)</em></a></li>
+				<li><a href="./video">视频<em>(已移除)</em></a></li>
 			</ul>
 		</div>
 
