--- a/template/game/forum/sidebar.htm
+++ b/template/game/forum/sidebar.htm
@@ -1,6 +1,6 @@
-<div class="tbbox">
-	<ul class="tb">
-		<li {if ($_GET['sortid']==33)} class="on"{/if}><a href="./ow">守望先锋</a></li>
-		<li {if ($_GET['sortid']==34)} class="on"{/if}><a href="./lol">英雄联盟</a></li>
+<div class="m-game-box">
+	<ul class="m-game-list">
+		<li {if ($_GET['sortid']==33)} class="on"{/if}><a class="u-ow" href="./ow">守望先锋</a></li>
+		<li {if ($_GET['sortid']==34)} class="on"{/if}><a class="u-lol" href="./lol">英雄联盟</a></li>
 	</ul>
 </div>
