--- a/template/game/forum/sidebar.htm
+++ b/template/game/forum/sidebar.htm
@@ -4,3 +4,10 @@
 		<li {if ($_GET['sortid']==34)} class="on"{/if}><a class="u-lol" href="./lol">英雄联盟</a></li>
 	</ul>
 </div>
+<!--{subtemplate jx3pve/s_filter_form}-->
+
+<!--{if ($_GET['sortid']==33)}-->
+<div class="m-ow-tips">
+	<!--{block/1814}-->
+</div>
+<!--{/if}-->
