Signed-off-by: unknown <17229398@qq.com>

--- a/css/pvx/game/ow.less
+++ b/css/pvx/game/ow.less
@@ -63,7 +63,7 @@
 		em{.none;}
 		strong{.none;color:#888;.fl;}
 
-		.u-hero-icon{.db;.clearfix;margin:(36px - 24px)/2 0;}
+		.u-hero-icon{.db;.clearfix;margin:(36px - 24px)/2 0;.h(24px);overflow:hidden;}
 		.u-hero-icon i{
 			.db;.fl;.size(24px);margin-right:2px;
 			background-position:center center;
