--- a/template/default/jx3pve/u_addef.htm
+++ b/template/default/jx3pve/u_addef.htm
@@ -54,12 +54,12 @@
 	<!--{if $thread['price'] > 0}-->
 	<span style="display:none;" class="u-addef-price">
 		<!--{if $thread['special'] == '3'}-->
-		- <a href="forum.php?mod=forumdisplay&fid=$_G[fid]&filter=specialtype&specialtype=reward$forumdisplayadd[specialtype]{if $_GET['archiveid']}&archiveid={$_GET['archiveid']}{/if}&rewardtype=1"><span class="xi1">[{lang thread_reward} <span class="xw1">$thread[price]</span> {$_G[setting][extcredits][$_G['setting']['creditstransextra'][2]][unit]}{$_G[setting][extcredits][$_G['setting']['creditstransextra'][2]][title]}]</span></a>
+		- <span class="xi1">[{lang thread_reward} <span class="xw1">$thread[price]</span> {$_G[setting][extcredits][$_G['setting']['creditstransextra'][2]][unit]}{$_G[setting][extcredits][$_G['setting']['creditstransextra'][2]][title]}]</span>
 		<!--{else}-->
 		- [{lang price} <span class="xw1">$thread[price]</span> {$_G[setting][extcredits][$_G['setting']['creditstransextra'][1]][unit]}{$_G[setting][extcredits][$_G['setting']['creditstransextra'][1]][title]}]
 		<!--{/if}-->
 	<!--{elseif $thread['special'] == '3' && $thread['price'] < 0}-->
-		- <a href="forum.php?mod=forumdisplay&fid=$_G[fid]&filter=specialtype&specialtype=reward$forumdisplayadd[specialtype]{if $_GET['archiveid']}&archiveid={$_GET['archiveid']}{/if}&rewardtype=2">[{lang reward_solved}]</a>
+		- [{lang reward_solved}]
 	</span>
 	<!--{/if}-->
 	
