--- a/template/macro/forum/sidebar.htm
+++ b/template/macro/forum/sidebar.htm
@@ -2,7 +2,8 @@
 <h2 class="default-sidebar-title m-macro-nav-title">分类导航<a class="u-more" href="./macro" title="全部">全部</a></h2>
 <div class="default-sidebar-content m-macro-nav">
 	<ul>
-		<li class="u-first" style="width:100%"><a href="./forum.php?mod=forumdisplay&fid=294&filter=typeid&typeid=396&sortid=18{if $_GET['orderby']}&orderby=$_GET['orderby']{/if}"><i class="ty" ></i>通用<span>（节日/副本/特殊等）</span></a></li>
+		<li><a href="./forum.php?mod=forumdisplay&fid=294&filter=typeid&typeid=396&sortid=18{if $_GET['orderby']}&orderby=$_GET['orderby']{/if}"><i class="ty" ></i>通用</a></li>
+		<li><a class="new" href="./forum.php?mod=forumdisplay&fid=294&filter=typeid&typeid=400&sortid=18{if $_GET['orderby']}&orderby=$_GET['orderby']{/if}"><i class="bd" ></i>霸刀<em></em></a></li>
 		<li><a href="./forum.php?mod=forumdisplay&fid=294&filter=typeid&typeid=394&sortid=18{if $_GET['orderby']}&orderby=$_GET['orderby']{/if}"><i class="mw" ></i>莫问</a></li>
 		<li><a href="./forum.php?mod=forumdisplay&fid=294&filter=typeid&typeid=395&sortid=18{if $_GET['orderby']}&orderby=$_GET['orderby']{/if}"><i class="xz"></i>相知</a></li>
 		<li><a href="./forum.php?mod=forumdisplay&fid=294&filter=typeid&typeid=374&sortid=18{if $_GET['orderby']}&orderby=$_GET['orderby']{/if}"><i class="bx" ></i>冰心</a></li>
