--- a/template/role/forum/sidebar.htm
+++ b/template/role/forum/sidebar.htm
@@ -3,6 +3,7 @@
 <div class="default-sidebar-content m-role-nav">
 	<ul>
 		<li class="ty"><a href="http://www.jx3pve.com/forum.php?mod=forumdisplay&fid=384&filter=typeid&typeid=346&orderby=lastedit"><i></i>通用</a></li>
+		<li class="bd new"><a href="http://www.jx3pve.com/forum.php?mod=forumdisplay&fid=384&filter=typeid&typeid=401&orderby=lastedit"><i></i>霸刀<em></em></a></li>
 		<li class="qx"><a href="http://www.jx3pve.com/forum.php?mod=forumdisplay&fid=384&filter=typeid&typeid=335&orderby=lastedit"><i></i>七秀</a></li>
 		<li class="sl"><a href="http://www.jx3pve.com/forum.php?mod=forumdisplay&fid=384&filter=typeid&typeid=340&orderby=lastedit"><i></i>少林</a></li>
 		<li class="wh"><a href="http://www.jx3pve.com/forum.php?mod=forumdisplay&fid=384&filter=typeid&typeid=336&orderby=lastedit"><i></i>万花</a></li>
