--- a/template/yylmacro/home/空间/space_menu.htm
+++ b/template/yylmacro/home/空间/space_menu.htm
@@ -1,4 +1,5 @@
 <!--{if $space[uid]}-->
+<div class="wp">
 <div id="uhd">
 	<!--{if CURMODULE == 'follow'}-->
 		<!--{subtemplate home/follow_user_header}-->
@@ -137,5 +138,6 @@
 		<!--{/if}-->
 	</ul>
 	</div>
+</div>
 </div>
 <!--{/if}-->
