--- a/css/module/widget/w-dialog.less
+++ b/css/module/widget/w-dialog.less
@@ -7,7 +7,41 @@
     	margin-left:10px;
     	padding:0 20px;
 	}
+
+	#e_imgattachlist .p_opt{
+		.w(564px);
+	}
+	.upfl {
+	    height: auto !important;
+	    max-height: 300px;
+	    overflow-x: hidden;
+	    overflow-y: auto;
+	    padding:10px 0;
+	    background-color:#EBF6F9;
+	}
+	.imgl{
+    	.w(100%);.db;
+    	tbody,tr{.db;}
+
+    	td{
+    		.x;
+    		.dbi;
+    		.w(24%) !important;
+    	}
+    	
+    	.imgf{
+    		padding:0 10px;
+    		input{.db;.full(x);}
+    	}
+    }
 }
+/*.desktop,.mobile.no-desktop{
+	.fwinmask{
+		.w(auto) !important;
+		max-width:1000px;
+		max-height:600px;
+	}
+}*/
 .ua-responsive .screen-s .fwinmask{
 
 	max-width:100%;
