--- a/css/pve/role/sidebar.less
+++ b/css/pve/role/sidebar.less
@@ -7,6 +7,7 @@
 			.w(50%);.fl;
 			a{
 				.db;.full(x);.fz(12px,32px);
+				.pr;
 				i{
 					background:url('@{c-role-imgurl}m-role-nav.png') no-repeat;
 					.size(32px);.dbi;.y;
@@ -17,9 +18,6 @@
 					color:#333;
 				}
 			}
-		}
-		.ty{
-			.w(100%);
 		}
 	}
 
@@ -40,6 +38,17 @@
 	.ty{.bgis(-363px,0);}
 	.cgm{
 		i{background-image:url('@{c-role-imgurl}role-mp/cgm.png');}
+	}
+	.bd{
+		.bgis(-363px,0);
+		//i{background-image:url('@{c-role-imgurl}role-mp/bd.png');}
+	}
+	.new{
+		.color(#f00,#f00,#f00);.bold;
+		em{
+			.db;.size(22px,9px);.pa;.rt(12px,2px);
+			background: url('@{url}user/new.gif')no-repeat right 35%;
+		}
 	}
 }
 
