--- a/template/fam/forum/sidebar.htm
+++ b/template/fam/forum/sidebar.htm
@@ -8,6 +8,8 @@
                 <select name="searchoption[211][value]" id="fbname" class="u-select">
                     <option value="0">请选择</option>
                     <option value="1">五人副本 </option>
+                    <option value="22">双曜亭 </option>
+                    <option value="23">观风殿 </option>
                     <option value="20">仙侣庭园 </option>
                     <option value="21">花月别院 </option>
                     <option value="2">夜守孤城 </option>
