--- a/css/module/common/c-header/userstatus.less
+++ b/css/module/common/c-header/userstatus.less
@@ -67,6 +67,10 @@
     	.lt(0,@c-header-height + 1px);
     	.full(x);
 
+        box-shadow: 0 1px 1px rgba(0,0,0,.4);
+        .r(0 0 4px 4px);
+        overflow:hidden;
+
     	ul{}
     	li{.nobreak;}
     	a{
