Signed-off-by: 17229398@qq.com <17229398@qq.com>

--- a/css/module/forum/forumdisplay/u_addef.less
+++ b/css/module/forum/forumdisplay/u_addef.less
@@ -11,3 +11,6 @@
 .u-addef-stick{.size(16px);margin-top:5px;background:url('@{url}forum/stick2.png') no-repeat 0 0;}
 
 .u-addef-readperm{.color(@yel);.normal;}
+
+.u-addef-att{.none;}
+.f-369 .u-addef-att{.db;}
