--- a/css/pve/macro/sidebar.less
+++ b/css/pve/macro/sidebar.less
@@ -27,7 +27,7 @@
 		.new{
 			color:#f00;.bold;
 			em{
-				.db;.size(22px,9px);.pa;.rt(12px,0);
+				.db;.size(22px,9px);.pa;.rt(12px,2px);
 				background: url('@{url}user/new.gif')no-repeat right 35%;
 			}
 		}
@@ -66,8 +66,8 @@
 			&.xz{background:url('@{url}role/cgm.png') no-repeat 0 -28px;}
 
 			&.bd{
-				//background:url('@{url}role/bd.png') no-repeat 0 0;
-				background-position:0 -561px;
+				background:url('@{url}role/bd.png') no-repeat 2px 0;
+				//background-position:0 -561px;
 			}
 		}
 		
