--- a/css/pve/macro/view.less
+++ b/css/pve/macro/view.less
@@ -59,7 +59,7 @@
 .m-banner-macro{
 	.pa;.rb(0,0);
 	.size(280px,130px);
-	border:1px solid #ddd;
+	//border:1px solid #ddd;
 	a,img{.db;}
 	span{.none;}
 }
