--- a/css/pve/role/sidebar.less
+++ b/css/pve/role/sidebar.less
@@ -40,8 +40,8 @@
 		i{background-image:url('@{c-role-imgurl}role-mp/cgm.png');}
 	}
 	.bd{
-		.bgis(-363px,0);
-		//i{background-image:url('@{c-role-imgurl}role-mp/bd.png');}
+		.bgis(0,0);
+		i{background-image:url('@{c-role-imgurl}role-mp/bd.png');}
 	}
 	.new{
 		.color(#f00,#f00,#f00);.bold;
