--- a/template/yylmacro/home/空间/space_blog_list.htm
+++ b/template/yylmacro/home/空间/space_blog_list.htm
@@ -21,11 +21,13 @@
 			<div class="i-header-title">日志</div>
 		</header>
 		<div id="pt" class="bm cl">
-			<div class="z">
-				<a href="./" class="nvhm" title="{lang homepage}">$_G[setting][bbname]</a> <em>&rsaquo;</em>
-				<a href="home.php">{lang useros}</a> <em>&rsaquo;</em>
-				<a href="home.php?mod=space&uid=$space[uid]">{$space[username]}</a> <em>&rsaquo;</em>
-				<a href="home.php?mod=space&uid=$space[uid]&do=blog&view=me">{lang blog}</a>
+			<div class="wp">
+				<div class="z">
+					<a href="./" class="nvhm" title="{lang homepage}">$_G[setting][bbname]</a> <em>&rsaquo;</em>
+					<a href="home.php">{lang useros}</a> <em>&rsaquo;</em>
+					<a href="home.php?mod=space&uid=$space[uid]">{$space[username]}</a> <em>&rsaquo;</em>
+					<a href="home.php?mod=space&uid=$space[uid]&do=blog&view=me">{lang blog}</a>
+				</div>
 			</div>
 		</div>
 		<style id="diy_style" type="text/css"></style>
@@ -52,10 +54,12 @@
 		<div class="wp">
 
 			<div id="pt" class="bm cl">
-				<div class="z">
-					<a href="./" class="nvhm" title="{lang homepage}">$_G[setting][bbname]</a> <em>&rsaquo;</em>
-					<a href="home.php">{lang useros}</a> <em>&rsaquo;</em>
-					<a href="home.php?mod=space&do=blog">{lang blog}</a>
+				<div class="wp">
+					<div class="z">
+						<a href="./" class="nvhm" title="{lang homepage}">$_G[setting][bbname]</a> <em>&rsaquo;</em>
+						<a href="home.php">{lang useros}</a> <em>&rsaquo;</em>
+						<a href="home.php?mod=space&do=blog">{lang blog}</a>
+					</div>
 				</div>
 			</div>
 
