Signed-off-by: unknown <17229398@qq.com>

--- a/css/module/forum/viewthread/c-fli-title.less
+++ b/css/module/forum/viewthread/c-fli-title.less
@@ -28,6 +28,13 @@
 	    }
 	}
 
+	.u-fav{
+		i{
+			.size(16px);.dbi;.y(-2px);margin-right:2px;
+			background:url('@{url}icon/fav.gif') no-repeat 0 0;
+		}
+	}
+
 	.w-stamp{
 		.fr;
 		.h(24px);
