--- a/template/default/common/nav.htm
+++ b/template/default/common/nav.htm
@@ -13,6 +13,6 @@
 			<li class="{if $_G[fid]=='67' || $_G[fid]=='407' || $_G[fid]=='394' || $_G[fid]=='404' || $_G[fid]=='406'}on{/if}"><a href="./raid">江湖<span>Info</span></a></li>
 			<li class="{if $_G[fid]=='2'}on{/if}"><a href="./bbs">讨论区<span>Forum</span></a></li>
 		</ul> 
-		<a href="./sitemap" class="u-all {if $_GET['topicid']==110}on{/if}">全部<span>All</span></a>
+		<a href="./sitemap" class="u-all {if $_GET['topicid']==110}on{/if}">Sitemap</a>
 	</div>
 </div>
