--- a/template/yylmacro/home/空间/space_profile.htm
+++ b/template/yylmacro/home/空间/space_profile.htm
@@ -14,10 +14,12 @@
 		<div class="i-header-title">名片</div>
 	</header>
 	<div id="pt" class="bm cl">
-		<div class="z">
-			<a href="./" class="nvhm" title="{lang homepage}">$_G[setting][bbname]</a> <em>&rsaquo;</em>
-			<a href="home.php?mod=space&uid=$space[uid]">{$space[username]}</a> <em>&rsaquo;</em>
-			{lang memcp_profile}
+		<div class="wp">
+			<div class="z">
+				<a href="./" class="nvhm" title="{lang homepage}">$_G[setting][bbname]</a> <em>&rsaquo;</em>
+				<a href="home.php?mod=space&uid=$space[uid]">{$space[username]}</a> <em>&rsaquo;</em>
+				{lang memcp_profile}
+			</div>
 		</div>
 	</div>
 	<style id="diy_style" type="text/css"></style>
