--- a/template/yylmacro/home/空间/space_thread.htm
+++ b/template/yylmacro/home/空间/space_thread.htm
@@ -27,13 +27,15 @@
 			<div class="i-header-title">主题</div>
 		</header>
 		<div id="pt" class="bm cl">
-			<div class="z">
-				<a href="./" class="nvhm" title="{lang homepage}">$_G[setting][bbname]</a> 
-				<em>&rsaquo;</em> <a href="home.php">{lang useros}</a>
-				
-				<em>&rsaquo;</em>
-				<a href="home.php?mod=space&uid=$space[uid]">{$space[username]}</a> <em>&rsaquo;</em>
-				<a href="home.php?mod=space&uid=$space[uid]&do=blog&view=me">{lang thread}</a>
+			<div class="wp">
+				<div class="z">
+					<a href="./" class="nvhm" title="{lang homepage}">$_G[setting][bbname]</a> 
+					<em>&rsaquo;</em> <a href="home.php">{lang useros}</a>
+					
+					<em>&rsaquo;</em>
+					<a href="home.php?mod=space&uid=$space[uid]">{$space[username]}</a> <em>&rsaquo;</em>
+					<a href="home.php?mod=space&uid=$space[uid]&do=blog&view=me">{lang thread}</a>
+				</div>
 			</div>
 		</div>
 		<!--{template home/space_menu}-->
