--- a/css/module/common/c-header/nav.less
+++ b/css/module/common/c-header/nav.less
@@ -12,7 +12,7 @@
 		.h(100%);
 		.u-all{
 			.pa;.rb(0,0);
-			letter-spacing:1px;
+			//letter-spacing:1px;
 			background-color:#fff;
 			border:1px solid #ddd;
 			border-bottom:none;
