--- a/css/module/forum/viewthread/c-fli-rate.less
+++ b/css/module/forum/viewthread/c-fli-rate.less
@@ -28,6 +28,17 @@
 
 }
 
+.m-jiyu-status{
+	.r(2px);
+	padding:3px 8px 3px 25px;
+	.color(#555,#333,#333);
+	a{padding:0 2px;}
+	a:hover{text-decoration:underline;}
+	background:url('@{url}icon/viewpay.gif') no-repeat 5px center;
+	border:1px dashed #ddd;
+	background-color:#fafafa;
+}
+
 .ua-responsive .screen-s{
 	.c-fli-rate{
 		.ratl,.ratl_l{
