--- a/template/yylmacro/home/空间/space_album_list.htm
+++ b/template/yylmacro/home/空间/space_album_list.htm
@@ -19,12 +19,15 @@
 			<a class="i-header-back" href="./home.php"><i></i></a>
 			<div class="i-header-title">相册</div>
 		</header>
+		
 		<div id="pt" class="bm cl">
-			<div class="z">
-				<a href="./" class="nvhm" title="{lang homepage}">$_G[setting][bbname]</a> <em>&rsaquo;</em>
-				<a href="home.php">{lang useros}</a> <em>&rsaquo;</em>
-				<a href="home.php?mod=space&uid=$space[uid]">{$space[username]}</a> <em>&rsaquo;</em>
-				<a href="home.php?mod=space&uid=$space[uid]&do=album&view=me&from=space">{lang album}</a>
+			<div class="wp">
+				<div class="z">
+					<a href="./" class="nvhm" title="{lang homepage}">$_G[setting][bbname]</a> <em>&rsaquo;</em>
+					<a href="home.php">{lang useros}</a> <em>&rsaquo;</em>
+					<a href="home.php?mod=space&uid=$space[uid]">{$space[username]}</a> <em>&rsaquo;</em>
+					<a href="home.php?mod=space&uid=$space[uid]&do=album&view=me&from=space">{lang album}</a>
+				</div>
 			</div>
 		</div>
 		<style id="diy_style" type="text/css"></style>
