--- a/template/yylmacro/home/空间/space_share_list.htm
+++ b/template/yylmacro/home/空间/space_share_list.htm
@@ -15,11 +15,13 @@
 			<div class="i-header-title">分享</div>
 		</header>
 		<div id="pt" class="bm cl">
-			<div class="z">
-				<a href="./" class="nvhm" title="{lang homepage}">$_G[setting][bbname]</a> <em>&rsaquo;</em>
-				<a href="home.php">{lang useros}</a> <em>&rsaquo;</em>
-				<a href="home.php?mod=space&uid=$space[uid]">{$space[username]}</a> <em>&rsaquo;</em>
-				<a href="home.php?mod=space&uid=$space[uid]&do=share&view=me&from=space">{lang share}</a>
+			<div class="wp">
+				<div class="z">
+					<a href="./" class="nvhm" title="{lang homepage}">$_G[setting][bbname]</a> <em>&rsaquo;</em>
+					<a href="home.php">{lang useros}</a> <em>&rsaquo;</em>
+					<a href="home.php?mod=space&uid=$space[uid]">{$space[username]}</a> <em>&rsaquo;</em>
+					<a href="home.php?mod=space&uid=$space[uid]&do=share&view=me&from=space">{lang share}</a>
+				</div>
 			</div>
 		</div>
 		<style id="diy_style" type="text/css"></style>
