--- a/template/yylmacro/home/空间/space_wall.htm
+++ b/template/yylmacro/home/空间/space_wall.htm
@@ -17,12 +17,14 @@
 		<div class="i-header-title">留言板</div>
 	</header>
 	<div id="pt" class="bm cl">
-		<div class="z">
-			<a href="./" class="nvhm" title="{lang homepage}">$_G[setting][bbname]</a> 
-			<em>&rsaquo;</em> <a href="home.php">{lang useros}</a>
-			<em>&rsaquo;</em>
-			<a href="home.php?mod=space&uid=$space[uid]">{$space[username]}</a> <em>&rsaquo;</em>
-			<a href="home.php?mod=space&uid=$space[uid]&do=wall&from=space">{lang message}</a>
+		<div class="wp">
+			<div class="z">
+				<a href="./" class="nvhm" title="{lang homepage}">$_G[setting][bbname]</a> 
+				<em>&rsaquo;</em> <a href="home.php">{lang useros}</a>
+				<em>&rsaquo;</em>
+				<a href="home.php?mod=space&uid=$space[uid]">{$space[username]}</a> <em>&rsaquo;</em>
+				<a href="home.php?mod=space&uid=$space[uid]&do=wall&from=space">{lang message}</a>
+			</div>
 		</div>
 	</div>
 	<style id="diy_style" type="text/css"></style>
